doctorapp/force-app/main/default/objects/Discount_Rule__c/Discount_Rule__c.object-meta.xml
<CustomObject>
    <description>Discount policies.</description>
    <label>Discount Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>