doctorapp/force-app/main/default/objects/Discount_Rule__c/fields/Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Applies_To__c</fullName>
    <description>Scope of the discount.</description>
    <label>Applies To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Cart</fullName>
                <default>true</default>
                <label>Cart</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>