doctorapp/force-app/main/default/objects/Discount_Rule__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Activation end.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>