doctorapp/force-app/main/default/objects/Discount_Rule__c/fields/Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount__c</fullName>
    <description>Cap on discount amount.</description>
    <label>Max Discount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>