doctorapp/force-app/main/default/objects/Discount_Rule__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Activation start.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>