doctorapp/force-app/main/default/objects/Discount_Rule__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Amount, or percentage when Type is Percentage (max 100).</description>
    <label>Value</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>