doctorapp/force-app/main/default/objects/Discount_Rule__c/validationRules/Dates_Ordered.validationRule-meta.xml
<ValidationRule>
    <fullName>Dates_Ordered</fullName>
    <active>true</active>
    <description>End Date cannot precede Start Date.</description>
    <errorConditionFormula>NOT(ISBLANK(Start_Date__c)) &amp;&amp; NOT(ISBLANK(End_Date__c)) &amp;&amp; End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>End Date must be on or after Start Date.</errorMessage>
    <errorDisplayField>End_Date__c</errorDisplayField>
</ValidationRule>