doctorapp/force-app/main/default/objects/Discount_Rule__c/validationRules/Min_Quantity_At_Least_Two.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Quantity_At_Least_Two</fullName>
    <active>true</active>
    <description>A bulk threshold below two is meaningless.</description>
    <errorConditionFormula>NOT(ISBLANK(Min_Quantity__c)) &amp;&amp; Min_Quantity__c &lt; 2</errorConditionFormula>
    <errorMessage>Min Quantity must be 2 or more when specified.</errorMessage>
    <errorDisplayField>Min_Quantity__c</errorDisplayField>
</ValidationRule>