doctorapp/force-app/main/default/objects/Discount_Rule__c/validationRules/Non_Negative_Max_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Max_Discount</fullName>
    <active>true</active>
    <description>The discount cap cannot be negative.</description>
    <errorConditionFormula>NOT(ISBLANK(Max_Discount__c)) &amp;&amp; Max_Discount__c &lt; 0</errorConditionFormula>
    <errorMessage>Max Discount cannot be negative.</errorMessage>
    <errorDisplayField>Max_Discount__c</errorDisplayField>
</ValidationRule>