doctorapp/force-app/main/default/objects/Discount_Rule__c/validationRules/Value_Within_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Within_Range</fullName>
    <active>true</active>
    <description>Discount value must be positive, and at most 100 when it is a percentage.</description>
    <errorConditionFormula>Value__c &lt; 0 || (ISPICKVAL(Type__c, &quot;Percentage&quot;) &amp;&amp; Value__c &gt; 100)</errorConditionFormula>
    <errorMessage>Value cannot be negative, and a percentage discount cannot exceed 100.</errorMessage>
    <errorDisplayField>Value__c</errorDisplayField>
</ValidationRule>